<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_irregular_verbs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="englishlanguagepro.rodinagames.englishlessonslearnplaytest.IrregularVerbsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Top_menu_text"/>

        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/level1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level2" />
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level3"/>
        </TableRow>

        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/level4"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level5" />
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level6"/>
        </TableRow>

        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/level7"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level8" />
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level9"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/level10"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level11" />
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/level12"/>
        </TableRow>


    </TableLayout>


</RelativeLayout>
