<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="englishlanguagepro.rodinagames.englishlessonslearnplaytest.Menu_Activity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/header"/>

        <TableRow>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/header_icon1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/header_icon2" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/header_icon3"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/header_icon4" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/header_icon5"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/header_icon6" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
